--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,21 @@
   "version": 2,
   "builds": [
     { "src": "api/**/*.cjs", "use": "@vercel/node" },
-    { "src": "package.json", "use": "@vercel/static-build" }
+    { 
+      "src": "package.json", 
+      "use": "@vercel/static-build",
+      "config": { 
+        "distDir": "build",
+        "cleanUrls": true
+      }
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" }
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { 
+      "src": "/manifest.json", 
+      "headers": { "Content-Type": "application/manifest+json" }
+    },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
